--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GITHUB_CLIENT_ID="3ec38f845ca16683c18a"
 GITHUB_CLIENT_SECRET="0017cc47a10ee71e22c58264c1f3928c9d9a0260"
+SECRET="22489c13d16c8f8d6b463073d05cb0f1"
